header yarmi tugadi

--- a/index.html
+++ b/index.html
@@ -9,8 +9,104 @@
 </head>
 <body>
 
-    <div class="big-boss-header">
-        
+    <div class="big-boss-header placer">
+        <header class="placer">
+            <div class="header-logo">
+                <h1>
+                    Premium
+                </h1>
+            </div>
+            <div class="header-elements placer">
+                <a href="#">Home <i class='bx bx-chevron-right'></i></a>
+                <a href="">Listings <i class='bx bx-chevron-right'></i></a>
+                <a href="">Blog <i class='bx bx-chevron-right'></i></a>
+                <a href="">Pages <i class='bx bx-chevron-right'></i></a>
+                <a href="">About</a>
+                <a href="">Contact</a>
+                <a href=""><i class='bx bx-user'></i> Sing in</a>
+                <button class="header-elements-btn">
+                    <a href="#">Submit Listing</a>
+                </button>
+            </div>
+        </header>
+        <div class="header-main placer">
+            <div class="header-main-head placer">
+                <p>
+                    Find cars for sale and for rent near you
+                </p>
+                <h1>
+                    Find Your Perfect Car
+                </h1>
+            </div>
+            <div class="header-main-main placer">
+                <div class="header-main-main-head placer">
+                    <a href="#">All</a>
+                    <a href="#">New</a>
+                    <a href="#">Used</a>
+                </div>
+                <div class="header-main-main-main placer">
+                        <div class="header-main-main-main-desktop-child placer">
+                            <h1>
+                                Any Makes
+                            </h1>
+                        </div>
+                        <div class="header-main-main-main-desktop-child placer">
+                            <h1>
+                                Any Models
+                            </h1>
+                        </div>
+                        <div class="header-main-main-main-desktop-child placer">
+                            <h1>
+                                Prices:
+                            </h1>
+                        </div>
+                        <div class="header-main-main-main-desktop-child placer">
+                            <h1>
+                                All Prices
+                            </h1>
+                        </div>
+                        <div class="header-main-main-main-desktop-child placer">
+                            <h1>
+                                <i class='bx bx-search-alt-2' ></i>Search Cars
+                            </h1>
+                        </div>
+                </div>
+            </div>
+            <div class="header-main-footer placer">
+                <div class="header-main-footer-head placer">
+                    <h1>
+                        Or Browse Featured Model
+                    </h1>
+                </div>
+                <div class="header-main-footer-main placer">
+                    <div class="header-main-footer-main-child">
+                        <h1>
+                            <i class='bx bxs-car-wash'></i> suv
+                        </h1>
+                    </div>
+                    <div class="header-main-footer-main-child">
+                        <h1>
+                            <i class='bx bxs-car-wash'></i> Sedan
+                        </h1>
+                    </div>
+                    <div class="header-main-footer-main-child">
+                        <h1>
+                            <i class='bx bxs-car-wash'></i> Hatchback
+                        </h1>
+                    </div>
+                    <div class="header-main-footer-main-child">
+                        <h1>
+                            <i class='bx bxs-car-wash'></i> Coupe
+                        </h1>
+                    </div>
+                    <div class="header-main-footer-main-child">
+                        <h1>
+                            <i class='bx bxs-car-wash'></i> Hybrid 
+                        </h1>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     
 </body>
