--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <script src="script.js" defer></script>
 </head>
 <body>
 
@@ -27,7 +28,35 @@
                 <button class="header-elements-btn">
                     <a href="#">Submit Listing</a>
                 </button>
-            </div>
+
+                <div class="flex-menu" id="flex-menu">
+                    <i class='bx bx-menu bx-fade-left' ></i>
+                </div>
+
+                <div class="menu-siderbar" id="open-menu">
+                    <header class="placer">
+                        <div class="navbar">
+                            <div class="logo-2 placer">
+                                <h1>pizza <br> hut</h1>
+                            </div>
+                            <div class="cart">
+                                <div class="hamburger-2 placer" id="colse-menu">
+                                    <i class='bx bx-menu bx-fade-left' ></i>
+                                </div>
+                            </div>
+                        </div>
+                    </header>
+                    <div class="menu-main placer">
+                            <a href="#">Home <i class='bx bx-chevron-right'></i></a>
+                            <a href="#">About Us</a>
+                            <a href="#">Shop <i class='bx bx-chevron-right'></i></a>
+                            <a href="#">Blog <i class='bx bx-chevron-right'></i></a>
+                            <a href="#">Pages <i class='bx bx-chevron-right'></i></a>
+                            <a href="#">Contact</a>
+                    </div>
+                </div>
+            </div>  
+
         </header>
         <div class="header-main placer">
             <div class="header-main-head placer">
@@ -79,27 +108,27 @@
                     </h1>
                 </div>
                 <div class="header-main-footer-main placer">
-                    <div class="header-main-footer-main-child">
+                    <div class="header-main-footer-main-child placer">
                         <h1>
                             <i class='bx bxs-car-wash'></i> suv
                         </h1>
                     </div>
-                    <div class="header-main-footer-main-child">
+                    <div class="header-main-footer-main-child placer">
                         <h1>
                             <i class='bx bxs-car-wash'></i> Sedan
                         </h1>
                     </div>
-                    <div class="header-main-footer-main-child">
+                    <div class="header-main-footer-main-child placer">
                         <h1>
                             <i class='bx bxs-car-wash'></i> Hatchback
                         </h1>
                     </div>
-                    <div class="header-main-footer-main-child">
+                    <div class="header-main-footer-main-child placer">
                         <h1>
                             <i class='bx bxs-car-wash'></i> Coupe
                         </h1>
                     </div>
-                    <div class="header-main-footer-main-child">
+                    <div class="header-main-footer-main-child placer">
                         <h1>
                             <i class='bx bxs-car-wash'></i> Hybrid 
                         </h1>
