--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
 
     <div class="big-boss-header placer">
+        <video class="position-video" autoplay src="video/NBvkP_3vVJo.mp4"></video>
         <header class="placer">
             <div class="header-logo">
                 <h1>
@@ -137,6 +138,232 @@
             </div>
         </div>
     </div>
+
+    <main class="placer">
+        <section class="expoler-premium placer">
+            <div class="expoler-premium-header placer">
+                <h1>Explore Our Premium Brands</h1>
+                <p>Show All Brands <i class='bx bx-chevron-right' ></i></p>
+            </div>
+            <div class="expoler-premium-main">
+                <div class="brands-cards placer">
+                    <img src="img/cars-logo/b1.jpg.png" alt="">
+                    <h1>Audi</h1>
+                </div>
+                <div class="brands-cards placer">
+                    <img src="img/cars-logo/b2.jpg.png" alt="">
+                    <h1>BMW</h1>
+                </div>
+                <div class="brands-cards placer">
+                    <img src="img/cars-logo/b3.jpg.png" alt="">
+                    <h1>Ford</h1>
+                </div>
+                <div class="brands-cards placer">
+                    <img src="img/cars-logo/b4.jpg.png" alt="">
+                    <h1>Mercedes Benz</h1>
+                </div>
+                <div class="brands-cards placer">
+                    <img src="img/cars-logo/b5.jpg.png" alt="">
+                    <h1>Peugeot</h1>
+                </div>
+                <div class="brands-cards placer">
+                    <img src="img/cars-logo/b6.jpg.png" alt="">
+                    <h1>Wolswagen</h1>
+                </div>
+            </div>
+        </section>
+        <section class="explore-vehicles placer">
+            <div class="explore-vehicles-header placer">
+                <div class="explore-vehicles-header-text">
+                    <h1>
+                        Explore All Vehicles
+                    </h1>
+                </div>
+                <div class="explore-vehicles-header-filter placer">
+                    <p>In Stock</p>
+                    <p>New Cars</p>
+                    <p>Used Cars</p>
+                </div>
+            </div>
+            <div class="explore-vehicles-main" id="expoler-vehicles">
+                <div class="card">
+                    <div class="cardimg" style=" position: relative;">
+                        <img src="https://images.unsplash.com/photo-1493238792000-8113da705763?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8Y2FyJTIwd2FsbHBhcGVyfGVufDB8fDB8fHww" alt="Car Image">
+                        <div class="badge">Great Price</div>
+                        <div class="bookmark">
+                            <img width="50" height="50" src="https://img.icons8.com/material-outlined/50/bookmark-ribbon.png" alt="bookmark-ribbon"/>
+                        </div>
+                    </div>
+                    <div class="card-content">
+                        <div class="title">Ford Transit – 2021</div>
+                        <div class="subtitle">4.0 D5 PowerPulse Momentum 5dr AWD</div>
+                        <div class="details">
+                            <div>
+                                <img width="100" height="100" src="https://img.icons8.com/ios/100/speed--v1.png" alt="speed--v1"/>
+                                2500 Miles
+                            </div>
+                            <div>
+                                <img width="100" height="100" src="https://img.icons8.com/ios/100/gas-station.png" alt="gas-station"/>
+                                Diesel
+                            </div>
+                            <div>
+                                <img width="100" height="100" src="https://img.icons8.com/ios/100/automatic.png" alt="automatic"/>
+                                Manual
+                            </div>
+                        </div>
+                        <div class="price-container">
+                            <div class="price">$22,000</div>
+                            <a href="#" class="view-details">View Details</a>
+                        </div>
+                    </div>
+                </div> 
+                <div class="card">
+                    <div class="cardimg" style=" position: relative;">
+                        <img src="https://images.unsplash.com/photo-1493238792000-8113da705763?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8Y2FyJTIwd2FsbHBhcGVyfGVufDB8fDB8fHww" alt="Car Image">
+                        <div class="badge">Great Price</div>
+                        <div class="bookmark">
+                            <img width="50" height="50" src="https://img.icons8.com/material-outlined/50/bookmark-ribbon.png" alt="bookmark-ribbon"/>
+                        </div>
+                    </div>
+                    <div class="card-content">
+                        <div class="title">Ford Transit – 2021</div>
+                        <div class="subtitle">4.0 D5 PowerPulse Momentum 5dr AWD</div>
+                        <div class="details">
+                            <div>
+                                <img width="100" height="100" src="https://img.icons8.com/ios/100/speed--v1.png" alt="speed--v1"/>
+                                2500 Miles
+                            </div>
+                            <div>
+                                <img width="100" height="100" src="https://img.icons8.com/ios/100/gas-station.png" alt="gas-station"/>
+                                Diesel
+                            </div>
+                            <div>
+                                <img width="100" height="100" src="https://img.icons8.com/ios/100/automatic.png" alt="automatic"/>
+                                Manual
+                            </div>
+                        </div>
+                        <div class="price-container">
+                            <div class="price">$22,000</div>
+                            <a href="#" class="view-details">View Details</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="cardimg" style=" position: relative;">
+                        <img src="https://images.unsplash.com/photo-1493238792000-8113da705763?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8Y2FyJTIwd2FsbHBhcGVyfGVufDB8fDB8fHww" alt="Car Image">
+                        <div class="badge">Great Price</div>
+                        <div class="bookmark">
+                            <img width="50" height="50" src="https://img.icons8.com/material-outlined/50/bookmark-ribbon.png" alt="bookmark-ribbon"/>
+                        </div>
+                    </div>
+                    <div class="card-content">
+                        <div class="title">Ford Transit – 2021</div>
+                        <div class="subtitle">4.0 D5 PowerPulse Momentum 5dr AWD</div>
+                        <div class="details">
+                            <div>
+                                <img width="100" height="100" src="https://img.icons8.com/ios/100/speed--v1.png" alt="speed--v1"/>
+                                2500 Miles
+                            </div>
+                            <div>
+                                <img width="100" height="100" src="https://img.icons8.com/ios/100/gas-station.png" alt="gas-station"/>
+                                Diesel
+                            </div>
+                            <div>
+                                <img width="100" height="100" src="https://img.icons8.com/ios/100/automatic.png" alt="automatic"/>
+                                Manual
+                            </div>
+                        </div>
+                        <div class="price-container">
+                            <div class="price">$22,000</div>
+                            <a href="#" class="view-details">View Details</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="cardimg" style=" position: relative;">
+                        <img src="https://images.unsplash.com/photo-1493238792000-8113da705763?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8Y2FyJTIwd2FsbHBhcGVyfGVufDB8fDB8fHww" alt="Car Image">
+                        <div class="badge">Great Price</div>
+                        <div class="bookmark">
+                            <img width="50" height="50" src="https://img.icons8.com/material-outlined/50/bookmark-ribbon.png" alt="bookmark-ribbon"/>
+                        </div>
+                    </div>
+                    <div class="card-content">
+                        <div class="title">Ford Transit – 2021</div>
+                        <div class="subtitle">4.0 D5 PowerPulse Momentum 5dr AWD</div>
+                        <div class="details">
+                            <div>
+                                <img width="100" height="100" src="https://img.icons8.com/ios/100/speed--v1.png" alt="speed--v1"/>
+                                2500 Miles
+                            </div>
+                            <div>
+                                <img width="100" height="100" src="https://img.icons8.com/ios/100/gas-station.png" alt="gas-station"/>
+                                Diesel
+                            </div>
+                            <div>
+                                <img width="100" height="100" src="https://img.icons8.com/ios/100/automatic.png" alt="automatic"/>
+                                Manual
+                            </div>
+                        </div>
+                        <div class="price-container">
+                            <div class="price">$22,000</div>
+                            <a href="#" class="view-details">View Details</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="cardimg" style=" position: relative;">
+                        <img src="https://images.unsplash.com/photo-1493238792000-8113da705763?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8Y2FyJTIwd2FsbHBhcGVyfGVufDB8fDB8fHww" alt="Car Image">
+                        <div class="badge">Great Price</div>
+                        <div class="bookmark">
+                            <img width="50" height="50" src="https://img.icons8.com/material-outlined/50/bookmark-ribbon.png" alt="bookmark-ribbon"/>
+                        </div>
+                    </div>
+                    <div class="card-content">
+                        <div class="title">Ford Transit – 2021</div>
+                        <div class="subtitle">4.0 D5 PowerPulse Momentum 5dr AWD</div>
+                        <div class="details">
+                            <div>
+                                <img width="100" height="100" src="https://img.icons8.com/ios/100/speed--v1.png" alt="speed--v1"/>
+                                2500 Miles
+                            </div>
+                            <div>
+                                <img width="100" height="100" src="https://img.icons8.com/ios/100/gas-station.png" alt="gas-station"/>
+                                Diesel
+                            </div>
+                            <div>
+                                <img width="100" height="100" src="https://img.icons8.com/ios/100/automatic.png" alt="automatic"/>
+                                Manual
+                            </div>
+                        </div>
+                        <div class="price-container">
+                            <div class="price">$22,000</div>
+                            <a href="#" class="view-details">View Details</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="get-a-fire">
+            <div class="container placer">
+                <div class="image-section">
+                    <img src="img/cars-img/Background (1).png" alt="Car on a scenic road">
+                    <button class="play-button">
+                        <span>&#9658;</span>
+                    </button>
+                </div>
+                <div class="content-section">
+                    <h1>Get A Fair Price For Your Car<br>Sell To Us Today</h1>
+                    <p>We are committed to providing our customers with exceptional service, competitive pricing, and a wide range of benefits:</p>
+                    <ul>
+                        <li>&#10003; We are the UK's largest provider, with more patrols in more places</li>
+                        <li>&#10003; You get 24/7 roadside assistance</li>
+                        <li>&#10003; We fix 4 out of 5 cars at the roadside</li>
+                    </ul>
+                    <a href="#" class="get-started">Get Started</a>
+                </div>
+            </div>
+        </section>
+    </main>
     
 </body>
 </html>
