--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                 </div>
             </div>
             <div class="explore-vehicles-main" id="expoler-vehicles">
-                <div class="card">
+                <!-- <div class="card">
                     <div class="cardimg" style=" position: relative;">
                         <img src="https://images.unsplash.com/photo-1493238792000-8113da705763?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8Y2FyJTIwd2FsbHBhcGVyfGVufDB8fDB8fHww" alt="Car Image">
                         <div class="badge">Great Price</div>
@@ -339,7 +339,7 @@
                             <a href="#" class="view-details">View Details</a>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </section>
         <section class="get-a-fire">
